# todo_backend_rs

./: .env.template  Cargo.toml  Dockerfile  README.md
docs/: MIGRATION.md  todo-backend-rs.postman_collection.json
migrations/: 20231003174931_init.sql
src/: lib.rs  main.rs
src/config/: database.rs  environment.rs
src/dtos/: api_error.rs  api_key.rs  api_message_response.rs  mod.rs  todo.rs
src/handlers/: api_key.rs  mod.rs  todo.rs
src/libs/: jwt.rs
src/middlewares/: api_key_authorize_middleware.rs  mod.rs
src/models/: todo.rs
src/repository/: todo.rs
src/routes/: api_key.rs  mod.rs  root.rs  todo.rs
