[package]
name = "todo_backend_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7.1", features = [
    "runtime-tokio-native-tls",
    "json",
    "runtime-tokio-rustls",
    "postgres",
    "macros",
    "chrono",
    "uuid",
] }
axum = { version = "0.6.20", features = ["headers"] }
serde_json = "1.0.104"
serde = "1.0.188"
chrono = { version = "0.4.30", features = ["serde"] }
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.4.4", features = ["full"] }
dotenv = "0.15.0"
uuid = { version = "1.4.1", features = ["serde", "v4"] }
envy = "0.4"
axum-macros = "0.3.8"
